@@ -2329,10 +2329,8 @@ static RenderObject* rendererForView(NSView* view)
         range = [(NSValue*)parameter rangeValue];
 
     } else {
-        // got a parameter of a type we never use
-        // NOTE: No ASSERT_NOT_REACHED because this can happen accidentally
-        // while using accesstool (e.g.), forcing you to start over
-        return nil;
+        // Default to super if the parameter type is unknown.
+        return [super accessibilityAttributeValue:attribute forParameter:parameter];
     }
     
     // Convert values to WebCore types
@@ -2544,7 +2542,8 @@ static RenderObject* rendererForView(NSView* view)
         }
     }
 
-    return nil;
+    // Default to super if parameter is not supported.
+    return [super accessibilityAttributeValue:attribute forParameter:parameter];
 }
 
 - (BOOL)accessibilityShouldUseUniqueId
